--- a/views/class/create.html
+++ b/views/class/create.html
@@ -5,9 +5,11 @@
 <meta charset="utf-8" />
 </head>
 <body>
-<form action="/api/create" method="post">
-<div> <label for="studentName">Enter The Student's Name:</label>
-<input type="text" id="student" name="student">
+<form action="./api/create" method="post">
+<div> <label for="studentName">Enter The Student's Name:</label><br>
+<input type="text" id="studentName" name="student" placeholder="name"><br><br>
+<input type="text" id="studentNumber" placeholder="student Number"><br><br>
+<input type="text" id="studentCourse" placeholder="Course"> <br><br>
 </div>
 <div class="button">
 <button type="submit">Add</button>
