--- a/views/class/delete.html
+++ b/views/class/delete.html
@@ -7,7 +7,8 @@
 <body>
 <form action="/api/delete" method="post">
 <div> <label for="studentName">Enter The Student's Name:</label>
-<input type="text" id="studentDelete" name="student">
+<input type="text" id="studentNameDelete" name="student"><br>
+<input type="text" id="studentCourseDelete">
 </div>
 <div class="button">
 <button type="submit">Delete</button>
