--- a/views/class/edit.html
+++ b/views/class/edit.html
@@ -7,8 +7,10 @@
 <body>
 <form action="/api/edit" method="post">
 <div> <label for="studentName">Enter The Student's Name:</label>
-<input type="text" id="studentEdit" name="student"> <br>
-<input type="text" id="studentReplace">
+<input type="text" id="studentNameEdit" name="student"> <br>
+<input type="text" id="studentNameReplace">
+<input type="text" id="studentNumberReplace">
+<input type="text" id="studentCourseReplace">
 </div>
 <div class="button">
 <button type="submit">Edit</button>
