--- a/views/class/index.html
+++ b/views/class/index.html
@@ -1,35 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<title>Class List</title>
+<meta charset="utf-8" />
+<script src="/cdn/scripts/class/index.js"></script><!-- Our JavaScript
+,→ code for this page-->
 </head>
 <body>
-<h1>Class List</h1>
-<!-- 'input' is an empty element, it consists of single tag -->
-<input type="text" id="search-text" placeholder="Filter students">
-<div id="students">
-</div>
-<br>
-<label for="students">Search Parameter:</label>
-<br>
-<select id="searchOption">
-    <option value ="name">Name</option>
-    <option value="studentNumber">Student Number</option>
-    <option value="yearOfStudy">Year of Study</option>
-    <option value="electives">Electives</option>
-
-</select>
-<br>
-<br>
-<input type="text" id="new-student-text" placeholder="Name">
-<button id="add-student">Add new student</button>
-<br>
-<br>
-<input type="text" id="user-name">
-<button type="button" id="save-user">Save</button>
-<script src="class-list-app.js">
-</script>
+<h1>Students in the School of EIE:</h1>
+<ol id="classList">
+<!-- The list of students in the school-->
+</ol>
+Add a new student:
+<input type="text" id="newStudentInput"></input>
+<button type="button" id="addStudentButton">Add</button>
 </body>
 </html>
-<!-- See https://developer.mozilla.org/en-US/docs/Web/HTML -->
-<!-- Note the reference guide: -->
-<!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Reference -->
