--- a/views/class/index.html
+++ b/views/class/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8" />
 <script src="/cdn/scripts/class/index.js"></script><!-- Our JavaScript
 ,→ code for this page-->
+<link rel="stylesheet" href="/cdn/styles/main.css">
 </head>
 <body>
 <h1>Students in the School of EIE:</h1>
